# esp32-berry-lang

components/berry/: CMakeLists.txt
components/berry/port/: be_portutils.c
components/esp_littlefs/: CMakeLists.txt
components/internals/: CMakeLists.txt
main/: idf_component.yml
